2011-11-27  Filip Pizlo  <fpizlo@apple.com>

        DFG should not emit GetMethod node
        https://bugs.webkit.org/show_bug.cgi?id=73175

        Reviewed by Gavin Barraclough.
        
        Replaces all instances of the GetMethod node with GetById. This appears to
        be a slight win on V8. This patch leaves GetMethod support in the code-base,
        making this decision easy to reverse, for now.

        * dfg/DFGByteCodeParser.cpp:
        (JSC::DFG::ByteCodeParser::parseBlock):

2011-11-26  Hajime Morrita  <morrita@chromium.org>

        Needs WTF_INLINE and JS_INLINE
        https://bugs.webkit.org/show_bug.cgi?id=72853

        Reviewed by Kevin Ollivier.

        Added WTF_HIDDEN, WTF_INLINE and JS_INLINE which
        indirect __attribute__((visibility("hidden"))

        * config.h:
        * wtf/ExportMacros.h:

2011-11-25  Michael Saboff  <msaboff@apple.com>

        String.prototype.toLower should be optimized for 8 bit strings
        https://bugs.webkit.org/show_bug.cgi?id=73154

        Changed stringProtoFuncToLowerCase to use StringImpl::lower() which has
        been optimized for 8 bit strings.

        This is worth ~7% to sunspider string.tagcloud.

        Reviewed by Filip Pizlo.

        * runtime/StringPrototype.cpp:
        (JSC::stringProtoFuncToLowerCase):

2011-11-25  Michael Saboff  <msaboff@apple.com>

        Array.toString always uses StringImpl::characters()
        https://bugs.webkit.org/show_bug.cgi?id=72969

        If all component strings are 8 bit, create an 8 bit result string for toString().

        This appears to be performance neutral to sunspider and v8.

        Reviewed by Filip Pizlo.

        * runtime/ArrayPrototype.cpp:
        (JSC::arrayProtoFuncToString):

2011-11-24  Michael Saboff  <msaboff@apple.com>

        UString methods are not character size aware
        https://bugs.webkit.org/show_bug.cgi?id=72975

        Changed the UString number constructors to build 8 bit strings.